--- a/templates/aguilus/css/cardio.css
+++ b/templates/aguilus/css/cardio.css
@@ -65,8 +65,13 @@ h6 {
 }
 
 h1 {
-	font-size: 60px;
+	font-size: 65px;
 }
+
+h1 span{
+	font-size: 50px;
+}
+
 
 h2 {
 	font-size: 48px;
@@ -115,7 +120,7 @@ header {
 	width: 100%;
 	color: white;
 	background: rgba(28, 36, 65, 0.93);
-	background: url('../img/header.jpg');
+	background: url('../img/header-min.jpg');
 	background-size: cover;
 }
 
@@ -475,7 +480,7 @@ section {
 }
 
 .about {
-	margin: 40px 0;
+	margin: 10px 0;
 }
 
 .services {
@@ -604,6 +609,15 @@ section {
 .pricing {
 	position: relative;
 	width: 100%;
+}
+
+.phone {
+	font-weight: bolder;
+}
+
+.copy {
+
+	font-size: 15px;
 }
 
 .pricings .pricing .box-main,
@@ -743,7 +757,7 @@ footer .social-footer {
 
 footer .social-footer li {
 	display: inline-block;
-	margin: 0 10px;
+	margin: 0 10px 0 0;
 }
 
 footer .social-footer li a {
@@ -1033,10 +1047,18 @@ footer .social-footer li:hover a {
 .shadow {
 	text-shadow: 1px 2px 10px #c5dcf3;
 }
+
+.shadow2 {
+	text-shadow: 1px 2px 10px #043974;
+}
 /* Colors */
 
 .white {
 	color: white;
+}
+
+.floral-white {
+	color: #000033;
 }
 
 .light-white {
@@ -1055,6 +1077,9 @@ footer .social-footer li:hover a {
 	color: #043974;
 }
 
+.light-blue {
+	color: #9EC0FE;
+}
 .blue-bg {
 	background: #065484;
 }
@@ -1073,10 +1098,10 @@ footer .social-footer li:hover a {
 
 @media(max-width:992px) {
 	h1 {
-		font-size: 36px;
+		font-size: 55px;
 	}
 	h2 {
-		font-size: 28px;
+		font-size: 40px;
 	}
 	h3 {
 		font-size: 24px;
